activate dragged window before moving

BUG:437679